--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="pref_lockscreen_settings_title_head">Lockscreen</string>
     <string name="pref_lockscreen_settings_style_title">Lockscreen style</string>
     <string name="pref_lockscreen_settings_style_summary">Choose your style of lockscreen</string>
-    <string name="pref_lockscreen_settings_style_ics_style">Below options are for Ics style only</string>
+    <string name="pref_lockscreen_settings_style_ics_style">ICS lockscreen options</string>
     <string name="pref_lockscreen_multiwaveview_3way_title">Tri-State</string>
     <string name="pref_lockscreen_multiwaveview_3way_summary">Adds a third option to the lockscreen</string>
     <string name="pref_lockscreen_multiwaveview_silentmode_title">Silentmode toggle</string>
