--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,4 +16,24 @@
     <string name="pref_lockscreen_custom_app_title">Select a custom app to launch</string>
     <string name="select_custom_app_title">Select custom application</string>
     <string name="group_applications">Applications</string>
+
+
+    <string name="statusbar_title">Statusbar</string>
+    <string name="pref_statusbar_settings_title_head">Statusbar</string>
+    <string name="title_notification_toolbox_widgets">Add widget</string>
+    <string name="dialog_notification_toolbox_widgets">What would you like to do?</string>
+    <string name="dialog_title_notification_toolbox_widgets">Add a toolbox widget</string>
+    <string name="dialog_remove">Remove</string>
+    <string name="dialog_cancel">Cancel</string>
+    <string name="category_statusbar_widgets">Toolbox Widgets</string>
+    <string name="category_statusbar_add_widgets">Add Widgets</string>
+    <string name="title_toggle_wifi">Wifi</string>
+    <string name="title_toggle_bluetooth">Bluetooth</string>
+    <string name="title_toggle_gps">GPS</string>
+    <string name="title_toggle_sync">Sync</string>
+    <string name="title_toggle_wifiap">Wifi Tether</string>
+    <string name="title_toggle_mobiledata">Mobile Data</string>
+    <string name="title_toggle_usbtether">Usb Tether</string>
+    <string name="title_toggle_autorotate">Auto Rotate</string>
+    <string name="title_toggle_airplane">Airplane Mode</string>
 </resources>
