--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="title_toggle_usbtether">Usb Tether</string>
     <string name="title_toggle_autorotate">Auto Rotate</string>
     <string name="title_toggle_airplane">Airplane Mode</string>
+
+        <!-- Music Control Options -->
+    <string name="pref_lockscreen_cat_music_controls_title">Music Controls</string>
+    <string name="pref_lockscreen_music_controls_volbtn_title">Volume button controls</string>
+    <string name="pref_lockscreen_music_controls_volbtn_summary">Change music tracks by long pressing vol-up(next) or vol-down(prev)</string>
 </resources>
