--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,4 +50,13 @@
     <string name="pref_lockscreen_cat_music_controls_title">Music Controls</string>
     <string name="pref_lockscreen_music_controls_volbtn_title">Volume button controls</string>
     <string name="pref_lockscreen_music_controls_volbtn_summary">Change music tracks by long pressing vol-up(next) or vol-down(prev)</string>
+
+        <!-- Interface Settings -->
+    <string name="interface_title">Interface</string>
+    <string name="pref_interface_title_head">Interface</string>
+    <string name="pref_interface_buttons_title">Buttons</string>
+    <string name="pref_interface_buttons_summary">Control actions of hardware buttons</string>
+    <string name="pref_category_button_title">Button controls</string>
+    <string name="pref_trackball_wake_toggle_title">Trackball wake</string>
+    <string name="pref_trackball_wake_toggle_summary">Allow trackball to wake the device</string>
 </resources>
