--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,7 +55,7 @@
 
         <!-- Music Control Options -->
     <string name="pref_lockscreen_cat_music_controls_title">Music Controls</string>
-    <string name="pref_lockscreen_music_controls_volbtn_title">Volume button controls</string>
+    <string name="pref_lockscreen_music_controls_volbtn_title">Volume btn music control</string>
     <string name="pref_lockscreen_music_controls_volbtn_summary">Change music tracks by long pressing vol-up(next) or vol-down(prev)</string>
 
         <!-- Interface Settings -->
@@ -66,4 +66,6 @@
     <string name="pref_category_button_title">Button controls</string>
     <string name="pref_trackball_wake_toggle_title">Trackball wake</string>
     <string name="pref_trackball_wake_toggle_summary">Allow trackball to wake the device</string>
+    <string name="pref_volume_wake_toggle_title">Volume btn wake</string>
+    <string name="pref_volume_wake_toggle_summary">Press volume up or down to wake the device (cannot be used with music control)</string>
 </resources>
