--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,8 @@
 
     <string name="pref_notification_toolbox_title">Notification toolbox</string>
     <string name="pref_notification_toolbox_summary">Settings for the notification toolbox</string>
+    <string name="pref_notification_toolbox_dropdown_title">Always show toolbox first</string>
+    <string name="pref_notification_toolbox_dropdown_summary">Set notification toolbox as default view on pulldown of status bar</string>
     <string name="title_notification_toolbox_widgets">Add widget</string>
     <string name="dialog_notification_toolbox_widgets">What would you like to do?</string>
     <string name="dialog_title_notification_toolbox_widgets">Add a toolbox widget</string>
