Settings : Vol long press skip tracks (2/2)
Part 1 : http://review.cyanogenmod.com/#change,13121

Allow user to toggle this feature (Default off)

Patchset 2 : Fix wrong key reference
Patchset 3 : Minor fixes
Patchset 4 : Renaming fix
Patchset 5 : Rebase
Patchset 6 : Rebase

Change-Id: Id79b08ba5d8a7e8ddc9c34015380b450dbba8b38

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="menu_key_title">Menu button</string>
     <string name="assist_key_title">Search button</string>
     <string name="appswitch_key_title">Recents button</string>
+    <string name="volume_keys_title">Volume buttons</string>
 
     <!-- Hardware key rebinding -->
     <string name="short_press_title">Short press action</string>
@@ -74,4 +75,8 @@
     <string name="action_sleep">Turn screen off</string>
     <string name="action_last_app">Last app</string>
     <string name="action_split_screen">Split screen</string>
+
+    <!-- Volume key music controls -->
+    <string name="volbtn_music_controls_title">Control playback</string>
+    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
 </resources>
