--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="pref_statusbar_title_head">Statusbar</string>
 
         <!-- Notification toolbox-->
-    <string name="pref_notification_toolbox_title_head">Notification toolbox</string>
+    <string name="pref_notification_toolbox_title_head">Notif toolbox</string>
     <string name="pref_toolbox_max_widgets_per_line_title">Max number of widgets per line</string>
     <string name="pref_notification_toolbox_title">Notification toolbox</string>
     <string name="pref_notification_toolbox_summary">Settings for the notification toolbox</string>
