option to choose battery icon style (EVToolbox part)
Change-Id: Id4176e3fec2f37722270b19591582dcfbd3ed776

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,6 +27,15 @@
         <!-- Statusbar Settings -->
     <string name="statusbar_title">Statusbar</string>
     <string name="pref_statusbar_title_head">Statusbar</string>
+        <!-- Statusbar >> Icons -->
+    <string name="pref_statusbar_icons_title">Statusbar Icons</string>
+    <string name="pref_statusbar_icons_summary">Settings to control statusbar icons</string>
+        <!-- Statusbar >> Icons >> Signal Sixbar -->
+    <string name="pref_statusbar_sixbar_signal_title">Use sixbar signal icons</string>
+    <string name="pref_statusbar_sixbar_signal_summary">Choose whether or or not to use sixbar icons (modded) for cell signal strength</string>
+        <!-- Statusbar >> Icons >> Battery Style -->
+    <string name="pref_statusbar_batt_style_title">Battery style</string>
+    <string name="pref_statusbar_batt_style_summary">Choose a battery icon style</string>
 
         <!-- Notification toolbox-->
     <string name="pref_notification_toolbox_title_head">Notif toolbox</string>
@@ -54,12 +63,6 @@
     <string name="title_toggle_brightness">Brightness</string>
 
     <string name="notificiation_toolbox_default_widgets">toggleWifi|toggleBluetooth|toggleAutoRotate</string>
-
-        <!-- Statusbar Settings >> Signal icons-->
-    <string name="pref_statusbar_icons_title">Statusbar Icons</string>
-    <string name="pref_statusbar_icons_summary">Settings to control statusbar icons</string>
-    <string name="pref_statusbar_sixbar_signal_title">Use sixbar signal icons</string>
-    <string name="pref_statusbar_sixbar_signal_summary">Choose whether or or not to use sixbar icons (modded) for cell signal strength</string>
 
         <!-- Music Control Options -->
     <string name="pref_lockscreen_cat_music_controls_title">Music Controls</string>
