--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="title_toggle_airplane">Airplane Mode</string>
     <string name="title_toggle_brightness">Brightness</string>
     <string name="title_toggle_wimax">Wimax</string>
+    <string name="title_toggle_notifications">DnD</string>
 
     <string name="notificiation_toolbox_default_widgets">toggleWifi|toggleBluetooth|toggleAutoRotate</string>
 
