--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,9 +20,11 @@
     <string name="pref_lockscreen_style_custom_app_sound">Sound toggle</string>
     <string name="pref_lockscreen_style_custom_app_unlock">Unlock switch</string>
     <string name="pref_lockscreen_style_custom_app_pick">Click here to pick a shortcut!</string>
-    <string name ="pref_lockscreen_category_custom_app_one_title">Custom mapping (Right)</string>
-    <string name ="pref_lockscreen_category_custom_app_two_title">Custom mapping (Top)</string>
-    <string name ="pref_lockscreen_category_custom_app_three_title">Custom mapping (Left)</string>
+    <string name="pref_lockscreen_category_custom_app_one_title">Custom mapping (Right)</string>
+    <string name="pref_lockscreen_category_custom_app_two_title">Custom mapping (Top)</string>
+    <string name="pref_lockscreen_category_custom_app_three_title">Custom mapping (Left)</string>
+    <string name="pref_lockscreen_category_custom_app_unlock_toast">Operation Aborted!\n\nAn unlock is necessary, please set a target to unlock before continuing!</string>
+
 
         <!-- Statusbar Settings -->
     <string name="statusbar_title">Statusbar</string>
