--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -83,6 +83,13 @@
     <string name="pref_trackball_wake_toggle_summary">Allow trackball to wake the device</string>
     <string name="pref_volume_wake_toggle_title">Volume btn wake</string>
     <string name="pref_volume_wake_toggle_summary">Press volume up or down to wake the device</string>
+        <!-- Interface >> Rotation -->
+    <string name="pref_interface_rotation_title">Rotation settings</string>
+    <string name="pref_interface_rotation_summary">Toggle specific angles</string>
+    <string name="pref_rotation_0_title">0 degrees</string>
+    <string name="pref_rotation_90_title">90 degrees</string>
+    <string name="pref_rotation_180_title">180 degrees</string>
+    <string name="pref_rotation_270_title">270 degrees</string>
 
         <!-- Performance Settings -->
     <string name="performance_title">Performance</string>
