[WIP] EVToolbox: New Preference widget for choosing lockscreens.
 * New preference can be used in other situations also.
 * Moved 3-way checkbox to a style option. (Adding more).

TODO: Need to clean up some code, some of the logic is just weird to me.

Change-Id: Ib5e01ab9a2bc2f86dd0b93b1592f230c9c34a4c3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,10 @@
         <!-- Generic -->
     <string name="app_name">Evervolv toolbox</string>
 
+
+    <string name="apply">Apply</string>
+    <string name="item_count">%1$d/%2$d</string>
+
         <!-- Lockscreen Settings -->
     <string name="lockscreen_title">Lockscreen</string>
     <string name="pref_lockscreen_title_head">Lockscreen</string>
