EVToolbox: Add setting to specify power menu screenshot delay.
Change-Id: I1c0874fb0c96913e444dbca89a4eb40be733d94e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="pref_power_menu_show_sound_title">Show sound options</string>
     <string name="pref_power_menu_show_airplane_mode_title">Show airplane mode</string>
     <string name="pref_power_menu_show_reboot_menu_title">Show reboot menu</string>
+    <string name="pref_power_menu_screenshot_delay_title">Set screenshot delay</string>
 
         <!-- Performance Settings -->
     <string name="performance_title">Performance</string>
