EVToolbox: Reconfigure managing widgets. Includes reodering now.
 * Widgets can now be reordered in 'Manage Widgets' dialog.
 * To remove a widget, long-press the item and press 'Remove'
 * A ViewFlipper is used to go back and forth with the add/manage
   view. (Press Add & Cancel)

Change-Id: Ib6a821bfb73b9fe4714c3f831c115daaf8ca38f2

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,13 +50,13 @@
     <string name="pref_notification_toolbox_summary">Settings for the notification toolbox</string>
     <string name="pref_notification_toolbox_dropdown_title">Always show toolbox first</string>
     <string name="pref_notification_toolbox_dropdown_summary">Set notification toolbox as default view on pulldown of status bar</string>
-    <string name="title_notification_toolbox_widgets">Add widget</string>
+    <string name="title_notification_toolbox_manage_widgets">Manage widgets</string>
     <string name="dialog_notification_toolbox_widgets">What would you like to do?</string>
-    <string name="dialog_title_notification_toolbox_widgets">Add a toolbox widget</string>
-    <string name="dialog_remove">Remove</string>
+    <string name="dialog_title_notification_toolbox_manage_widgets">Manage toolbox widgets</string>
+    <string name="dialog_add">Add</string>
+    <string name="dialog_done">Done</string>
     <string name="dialog_cancel">Cancel</string>
-    <string name="category_statusbar_widgets">Toolbox Widgets</string>
-    <string name="category_statusbar_add_widgets">Add Widgets</string>
+    <string name="category_statusbar_manage_widgets">Manage Widgets</string>
     <string name="title_toggle_wifi">Wifi</string>
     <string name="title_toggle_bluetooth">Bluetooth</string>
     <string name="title_toggle_gps">GPS</string>
