--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
         <!-- Generic -->
-    <string name="app_name">Evervolv toolbox</string>
+    <string name="app_name">Toolbox</string>
 
 
     <string name="apply">Apply</string>
@@ -44,19 +44,16 @@
     <string name="pref_statusbar_batt_style_summary">Choose a battery icon style</string>
 
         <!-- Notification toolbox-->
-    <string name="pref_notification_toolbox_title_head">Notif toolbox</string>
-    <string name="pref_toolbox_max_widgets_per_line_title">Max number of widgets per line</string>
-    <string name="pref_notification_toolbox_title">Notification toolbox</string>
-    <string name="pref_notification_toolbox_summary">Settings for the notification toolbox</string>
-    <string name="pref_notification_toolbox_dropdown_title">Always show toolbox first</string>
-    <string name="pref_notification_toolbox_dropdown_summary">Set notification toolbox as default view on pulldown of status bar</string>
-    <string name="title_notification_toolbox_manage_widgets">Manage widgets</string>
-    <string name="dialog_notification_toolbox_widgets">What would you like to do?</string>
-    <string name="dialog_title_notification_toolbox_manage_widgets">Manage toolbox widgets</string>
+    <string name="pref_qwik_widgets_title_head">QwikWidgets</string>
+    <string name="pref_qwik_widgets_max_per_line_title">Max widgets per line</string>
+    <string name="pref_qwik_widgets_title">QwikWidgets</string>
+    <string name="pref_qwik_widgets_summary">Settings for QwikWidgets</string>
+    <string name="pref_notification_dropdown_title">Show QwikWidgets first</string>
+    <string name="pref_notification_dropdown_summary">Set QwikWidgets as default view on pulldown of status bar</string>
+    <string name="title_qwik_widgets_manage_widgets">Manage QwikWidgets</string>
     <string name="dialog_add">Add</string>
     <string name="dialog_done">Done</string>
     <string name="dialog_cancel">Cancel</string>
-    <string name="category_statusbar_manage_widgets">Manage Widgets</string>
     <string name="title_toggle_wifi">Wifi</string>
     <string name="title_toggle_bluetooth">Bluetooth</string>
     <string name="title_toggle_gps">GPS</string>
@@ -70,7 +67,7 @@
     <string name="title_toggle_wimax">Wimax</string>
     <string name="title_toggle_notifications">DnD</string>
 
-    <string name="notificiation_toolbox_default_widgets">toggleWifi|toggleBluetooth|toggleAutoRotate</string>
+    <string name="default_qwik_widgets">toggleWifi|toggleBluetooth|toggleAutoRotate</string>
 
         <!-- Music Control Options -->
     <string name="pref_lockscreen_cat_music_controls_title">Music Controls</string>
