EVToolbox: Add config option to disable eclair lockscreen.
 * I can't get the lockscreen to look right on tablets. Doing this in the
   mean time.

Change-Id: I432de09168d8d509bea9a8dc82e1d6e0a2e7fb52

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="select_custom_app_title">Select custom application</string>
     <string name="group_applications">Applications</string>
 
+    <string name="pref_lockscreen_style_no_eclair_toast">Eclair style is unavailable for this device!\nPlease choose another style.</string>
     <string name="pref_lockscreen_style_custom_app_sound">Sound toggle</string>
     <string name="pref_lockscreen_style_custom_app_unlock">Unlock switch</string>
     <string name="pref_lockscreen_style_custom_app_pick">Click here to pick a shortcut!</string>
