--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -46,6 +46,10 @@
     <!-- Hardware key -->
     <string name="button_settings_title">Buttons</string>
 
+    <!-- Navigation Bar -->
+    <string name="disable_navkeys_title">On-screen navigation bar</string>
+    <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>
+
     <!-- Hardware key categories -->
     <string name="power_key_title">Power button</string>
     <string name="home_key_title">Home button</string>
