EVToolbox: Add transparent lockscreen toggle.
Change-Id: I888b75dd3152bf5df6de9b91170219142f311d4f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,9 @@
         <!-- Lockscreen Settings -->
     <string name="lockscreen_title">Lockscreen</string>
     <string name="pref_lockscreen_title_head">Lockscreen</string>
+    <string name="pref_lockscreen_transparent">Enable transparent lockscreen</string>
+
+        <!-- Statusbar >> Style -->
     <string name="pref_lockscreen_style_title">Lockscreen style</string>
     <string name="pref_lockscreen_style_summary">Choose your style of lockscreen</string>
     <string name="pref_lockscreen_style_ics_style">ICS lockscreen options</string>
