--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="lockscreen_title">Lockscreen</string>
     <string name="pref_lockscreen_title_head">Lockscreen</string>
     <string name="pref_lockscreen_transparent">Enable transparent lockscreen</string>
+    <string name="pref_lockscreen_message_title">Message</string>
+    <string name="pref_lockscreen_message_summary">Change the message displayed on the lockscreen</string>
+    <string name="pref_lockscreen_message_dialog_title">Enter message to be displayed</string>
 
         <!-- Statusbar >> Style -->
     <string name="pref_lockscreen_style_title">Lockscreen style</string>
