evtoolbox: Add customizable lockscreen background
 * loosely based on: http://goo.gl/lPPLw
 * Can set a fill color, custom image and completely transparent with
   desktop showing.

Change-Id: I1a4df1c64b786294f0fafd4fd442ed5df0613811

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,10 +14,17 @@
         <!-- Lockscreen Settings -->
     <string name="lockscreen_title">Lockscreen</string>
     <string name="pref_lockscreen_title_head">Lockscreen</string>
-    <string name="pref_lockscreen_transparent">Enable transparent lockscreen</string>
     <string name="pref_lockscreen_message_title">Message</string>
     <string name="pref_lockscreen_message_summary">Change the message displayed on the lockscreen</string>
     <string name="pref_lockscreen_message_dialog_title">Enter message to be displayed</string>
+    <string name="pref_lockscreen_background_title">Background</string>
+    <string name="lockscreen_custom_background_dialog_title">Choose color</string>
+    <string name="lockscreen_background_color_fill">Color fill</string>
+    <string name="lockscreen_background_custom_image">Custom image</string>
+    <string name="lockscreen_background_transparent">Transparent</string>
+    <string name="lockscreen_background_default_wallpaper">Default wallpaper</string>
+    <string name="lockscreen_background_result_successful">Background changed successfully</string>
+    <string name="lockscreen_background_result_not_successful">Background could not be changed</string>
 
         <!-- Statusbar >> Style -->
     <string name="pref_lockscreen_style_title">Lockscreen style</string>
