--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,13 +3,13 @@
         <!-- Generic -->
     <string name="app_name">Toolbox</string>
 
-
     <string name="apply">Apply</string>
     <string name="item_count">%1$d/%2$d</string>
     <string name="okay">Okay</string>
     <string name="cancel">Cancel</string>
     <string name="reboot">Reboot</string>
     <string name="later">Later</string>
+    <string name="flash">Flash</string>
 
         <!-- Lockscreen Settings -->
     <string name="lockscreen_title">Lockscreen</string>
@@ -153,4 +153,52 @@
     <string name="pref_cpu_max_freq_summary">%s</string>
     <string name="pref_cpu_set_on_boot">Set on boot</string>
     <string name="pref_cpu_set_on_boot_summary">Restore the processor settings on boot</string>
+
+        <!-- Updates -->
+    <string name="updates_title">Updates</string>
+    <string name="pref_updates_title_head">Updates</string>
+        <!-- Updates Main -->
+    <string name="pref_updates_nightly_title">Nightlies</string>
+    <string name="pref_updates_nightly_summary">Updates that are compiled nightly\n\tWARNING: These may or may not be stable.</string>
+    <string name="pref_updates_release_title">Releases</string>
+    <string name="pref_updates_release_summary">Updates that are in either preview, alpha or beta form\n\tBugs can be reported for these builds.</string>
+    <string name="pref_updates_test_title">Tests</string>
+    <string name="pref_updates_test_summary">Updates that need specific testing done to them\n\tReporting bugs needs to be done on IRC</string>
+    <string name="pref_updates_gapps_title">Gapps</string>
+    <string name="pref_updates_gapps_summary">Google apps (required for Google Experience) </string>
+        <!-- Updates Sub -->
+    <string name="menu_refresh">Refresh</string>
+    <string name="status_downloaded">Downloaded</string>
+    <string name="status_installed">Installed</string>
+    <string name="status_downloaded_and_installed">Downloaded &amp; installed</string>
+    <string name="status_new">New</string>
+
+    <string name="pref_updates_schedule_title">Check for updates</string>
+    <string name="pref_updates_schedule_dialog_title">Check for updates</string>
+    <string name="pref_updates_category_available_updates_title">Available updates</string>
+        <!-- Updates (Dialogs) -->
+    <string name="alert_dialog_error_title">Error!</string>
+    <string name="alert_dialog_manifest_download_error">Error downloading manifest entries</string>
+    <string name="alert_dialog_cancel_title">Cancel</string>
+    <string name="alert_dialog_confirm_cancel">Are you sure you want to cancel this update?</string>
+    <string name="alert_dialog_delete_title">Delete</string>
+    <string name="alert_dialog_confirm_delete">Are you sure you want to delete this update?</string>
+    <string name="alert_dialag_gapps_title">Select gapps to install</string>
+    <string name="alert_dialag_warning_title">Warning!</string>
+    <string name="alert_dialag_warning_message">TWRP Is the only recovery supported at the moment.</string>
+        <!-- Updates (Changelog/Info) -->
+    <string name="changelog_info_dialog_title">Changelog &amp; info</string>
+    <string name="changelog_info_dialog_tab_title_info">Info</string>
+    <string name="changelog_info_dialog_tab_title_changelog">Changelog</string>
+
+    <string name="changelog_info_dialog_tab_info_date">Date:</string>
+    <string name="changelog_info_dialog_tab_info_filename">Filename:</string>
+    <string name="changelog_info_dialog_tab_info_size">Size:</string>
+    <string name="changelog_info_dialog_tab_info_md5sum_server">Md5Sum: \n(on server)</string>
+    <string name="changelog_info_dialog_tab_info_md5sum_local">Md5Sum: \n(on device)</string>
+    <string name="changelog_info_dialog_tab_info_status">Status:</string>
+
+    <string name="changelog_info_dialog_tab_info_md5sum_local_not_exist">Not downloaded</string>
+    <string name="changelog_info_dialog_tab_info_md5sum_calculate">Calculating md5sum…</string>
+
 </resources>
